2006-02-26  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-w3m-parse-header): When the url matchs to ftp,
	rewrite type and charset.
	(w3m-w3m-attributes-1): Don't rewrite type and charset.
	(w3m-w3m-retrieve): Don't check status code when the url does not
	match to http.

2006-02-21 Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-itmedia.el (shimbun-itmedia-retrieve-next-pages):
	Improve regexp matching next page tags.

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Support Torino
	news in sports group.

2006-02-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yomiuri.el (shimbun-yomiuri-group-table): Support
	Torino news in sports group.
	(shimbun-yomiuri-get-headers): Ditto.
	(shimbun-yomiuri-get-top-header): Ditto; skip photo news.

2006-02-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-prepare-article): Fix content
	start regexp for world.china group.

2006-02-12  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-x51.el (shimbun-x51-url): Remove it.
	(shimbun-x51-group-alist): Renew URL rule and add new groups.
	(shimbun-x51-content-start, shimbun-x51-content-end): Add `anima'
	rule.
	(shimbun-x51-concat-url): Renew generate rule.
	(shimbun-rss-build-message-id): Add `anima' id generate rule.
	(shimbun-get-headers): Fix casing type rdf,normal pages and
	obsolete groups.

2006-02-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Remove
	kansai.horiekenichi group;

	add groups book.booktimes, book.edu, culture.yurufemi, digital.av,
	edu.news, housing.soudan, international.america,
	international.asia, international.asiamachi, international.etc,
	international.europe, international.middleeast,
	international.seoul, international.shien, kansai.beichou,
	kansai.heibon, kansai.honma, kansai.kataritsugu, kansai.madam,
	kansai.otoriyose, kansai.sakana, kansai.sweets, world.china, and
	world.germany;

	fix index urls of culture.column and kansai.fuukei groups.
