@@ -178,7 +178,7 @@
 
 (defconst emacs-w3m-version
   (eval-when-compile
-    (let ((rev "$Revision: 1.1172 $"))
+    (let ((rev "$Revision: 1.1173 $"))
       (and (string-match "\\.\\([0-9]+\\) \\$\\'" rev)
 	   (setq rev (- (string-to-number (match-string 1 rev)) 1136))
 	   (format "1.4.%d" (+ rev 50)))))
@@ -4051,8 +4051,11 @@ for decoding when the cdr that the data specify is not available.")
 	(goto-char (point-min))
 	(while (re-search-forward "\240\\|&#160;\\|&#xa0;" nil t)
 	  (replace-match "&nbsp;"))))
-    (set-buffer-multibyte t)
-    (decode-coding-region (point-min) (point-max) w3m-current-coding-system)))
+    (insert
+     (prog1
+	 (decode-coding-string (buffer-string) w3m-current-coding-system)
+       (erase-buffer)
+       (set-buffer-multibyte t)))))
 
 (defun w3m-x-moe-decode-buffer ()
   (let ((args '("-i" "-cs" "x-moe-internal"))
